[package]
name = "dht_proxy_monitor"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]

[dependencies]
env_logger = "0.5.6"
hyper-native-tls = "0.2.4"
iron = "0.6.0"
log = "0.4.1"
reqwest = "0.8.7"
router = "0.6.0"
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"
